@@ -1,4 +1,5 @@
 pgcenter (0.6.2) unstable; urgency=low
+  * added support for pg_stat_database.checksum_failures (pg-12)
   * added support of pg_stat_progress_cluster and pg_stat_progress_create_index views
   * inject program version info from git at build time
   * fix #66, pgcenter crashes when no running postgres
